# GameLauncher

./: CMakeLists.txt  README.md  epicscanner.cpp  epicscanner.h  gamelibrary.cpp  gamelibrary.h  importwindow.cpp  importwindow.h  importwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newsfetcher.cpp  newsfetcher.h  newspage.cpp  newspage.h  newspage.ui  resources.qrc  settings.cpp  settings.h  settings.ui  steamLibrary.cpp  steamLibrary.h  steamfetcher.cpp  steamfetcher.h  steamscanner.cpp  steamscanner.h  wizard.cpp  wizard.h  wizard.ui  wizardconclusion.cpp  wizardconclusion.h  wizardconclusion.ui  wizardepic.cpp  wizardepic.h  wizardepic.ui  wizardintro.cpp  wizardintro.h  wizardintro.ui  wizardmanual.cpp  (+5 more)
.github/workflows/: windows-release.yml
ColorSchemes/: DarkModeColorScheme.xml  GameLauncherColorScheme.xml  LightModeColorScheme.xml
